--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bitmascot?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
-##spring.datasource.username=root
-##spring.datasource.password=hasanmehadi
+spring.datasource.username=root
+spring.datasource.password=hasanmehadi
 
-spring.datasource.username=hasan
-spring.datasource.password=hasan
+##spring.datasource.username=hasan
+##spring.datasource.password=hasan
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.dbcp2.test-while-idle=true
