--- a/src/main/resources/static/userinfo/package.json
+++ b/src/main/resources/static/userinfo/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^4.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
